--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragon_leader_angry",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "龙龙龙",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,9 @@
   "dependencies": {
     "dragon_awakening_of_insects": "^1.0.1",
     "dragon_lucky_words": "^1.0.3",
+    "dragon_number_guessing": "^1.0.3",
+    "dragon_rain": "^1.0.6",
+    "dragon_spring_equinox": "^1.0.0",
     "jquery": "^3.7.1"
   }
 }
